# message-board-c

./: .gitignore  AGENTS.md  CMakeLists.txt  README.md
assets/: app.js  index.html  styles.css
scripts/: build.sh  clean.sh  dev.sh  run.sh  seed_posts.sh
src/: config.h  db.c  db.h  db_tags.c  db_tags.h  http.c  http.h  logging.c  logging.h  main.c  render.c  render.h  util.c  util.h
